@@ -1,3 +1,8 @@
+2002-08-06  Andrew Lunn <andrew.lunn@ascom.ch>
+
+	* src/ftpclient.c: Send "quit" not "quit " to keep some servers
+	  happy.  Also deal with multi line replies correctly.
+	
 2002-02-22  Hugo Tyson  <hmt@redhat.com>
 
 	* doc/ftpclient.sgml: New file.  Document it.
